--- a/plugins/generators/CMakeLists.txt
+++ b/plugins/generators/CMakeLists.txt
@@ -2,7 +2,7 @@ add_subdirectory(solid)
 add_subdirectory(pattern)
 add_subdirectory(simplexnoise)
 add_subdirectory(screentone)
-if(SeExpr2_FOUND)
+if(KSeExpr_FOUND)
   add_subdirectory(seexpr)
 endif()
 add_subdirectory(multigridpattern)
