ChromeOS: make theme's background to be black
QPA plugin sets theme background as the window background. Previously
this was bright pink, which makes things look a bit ugly while resizing.

--- a/packaging/android/apk/AndroidManifest.xml
+++ b/packaging/android/apk/AndroidManifest.xml
@@ -9,6 +9,7 @@
                   android:label="Krita"
                   android:screenOrientation="unspecified"
                   android:resizeableActivity="true"
+                  android:theme="@style/DefaultTheme"
                   android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
