Add libmypaint and its dependency libjson-c
This disables the glib introspection for libmypaint, which probably
isn't needed?

--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -242,3 +242,5 @@ add_subdirectory( ext_heif )
 add_subdirectory(ext_giflib)
 add_subdirectory(ext_quazip)
 add_subdirectory(ext_seexpr)
+add_subdirectory(ext_json_c)
+add_subdirectory(ext_mypaint)
