Build the mypaint dependency
Only flatpak hasn't changed -- I have no idea how to add libmypaint
to that.

(cherry picked from commit 10bcafc15244477a34b28fd2b6002ba6e3c49eb0)

--- a/packaging/linux/snap/snapcraft.yaml
+++ b/packaging/linux/snap/snapcraft.yaml
@@ -83,6 +83,7 @@ parts:
       - libx11-dev
       - libxi-dev
       - vc-dev
+      - libmypaint-dev
     parse-info: [usr/share/metainfo/org.kde.krita.appdata.xml]
 
 
@@ -104,6 +105,7 @@ parts:
       - libxi6
       - libyaml-cpp0.5v5
       - zlib1g
+      - libmypaint-1.5-1
       # Required for rendering animations
       - ffmpeg
       - libglu1-mesa
