--- a/3rdparty/ext_mypaint/CMakeLists.txt
+++ b/3rdparty/ext_mypaint/CMakeLists.txt
@@ -5,6 +5,9 @@ ExternalProject_Add( ext_mypaint
     URL_MD5 7f1dab2d30ce8a3f494354c7c77a2977
         
     PATCH_COMMAND ${PATCH_COMMAND} -p1 -i ${CMAKE_CURRENT_SOURCE_DIR}/0001-Add-cmake-build-system.patch
+        COMMAND ${PATCH_COMMAND} -p1 -i ${CMAKE_CURRENT_SOURCE_DIR}/0002-cmake-library-versioning-info-for-pkg-config.patch
+        COMMAND ${PATCH_COMMAND} -p1 -i ${CMAKE_CURRENT_SOURCE_DIR}/0003-cmake-library-versioning-info-for-CMake-itself.patch
+        COMMAND ${PATCH_COMMAND} -p1 -i ${CMAKE_CURRENT_SOURCE_DIR}/0004-cmake-Fix-relative-paths.patch
             
     INSTALL_DIR ${PREFIX_ext_mypaint}
     CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${PREFIX_ext_mypaint} -DCMAKE_BUILD_TYPE=${GLOBAL_BUILD_TYPE} ${GLOBAL_PROFILE}
