--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -738,13 +738,12 @@ set_package_properties(LibMyPaint PROPERTIES
     DESCRIPTION "MyPaint brush engine API for C/C++"
     TYPE OPTIONAL
     PURPOSE "Required for the mypaint brush engine")
-if(LIBMYPAINT_FOUND)
-    
-    if(LIBMYPAINT_VERSION VERSION_LESS "1.4.0")
+if(LibMyPaint_FOUND)
+    if(LibMyPaint_VERSION VERSION_LESS "1.4.0")
         message(WARNING "Please update libmypaint to version above 1.4.0 as lower versions are known to crash")
     endif()
 endif()
-macro_bool_to_01(LIBMYPAINT_FOUND HAVE_LIBMYPAINT)
+macro_bool_to_01(LibMyPaint_FOUND HAVE_LIBMYPAINT)
 configure_file(config-mypaint.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config-mypaint.h )
 
 ##
