Make sure Krita on Android is always marked as beta

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -91,8 +91,14 @@ set(KRITA_ALPHA 1) # uncomment only for Alpha
 #set(KRITA_BETA 1) # uncomment only for Beta
 #set(KRITA_RC 1) # uncomment only for RC
 
-if(NOT DEFINED KRITA_ALPHA AND NOT DEFINED KRITA_BETA AND NOT DEFINED KRITA_RC)
+if(NOT ANDROID AND NOT DEFINED KRITA_ALPHA AND NOT DEFINED KRITA_BETA AND NOT DEFINED KRITA_RC)
     set(KRITA_STABLE 1) # do not edit
+endif()
+
+if (ANDROID)
+    if (NOT DEFINED KRITA_ALPHA)
+        set(KRITA_BETA 1)
+    endif()
 endif()
 
 message(STATUS "Krita version: ${KRITA_VERSION_STRING}")
