We should use "beta1", not just "beta"

--- a/packaging/config.ini
+++ b/packaging/config.ini
@@ -1,10 +1,10 @@
 [krita]
 gitModule   = yes
-gitTag      = v4.4.2-beta
+gitTag      = v4.4.2-beta1
 category    = graphics
 mainmodule  = branches/stable
 l10nmodule  = krita
-version     = 4.4.2-beta
+version     = 4.4.2-beta1
 translations= yes
 docs        = no
 kde_release = no
