Add a skeleton test for KoResourceServer

--- a/libs/resources/tests/CMakeLists.txt
+++ b/libs/resources/tests/CMakeLists.txt
@@ -23,6 +23,7 @@ ecm_add_tests(
     TestStorageModel
     TestResourceSearchBoxFilter
     TestStorageFilterProxyModel
+    TestResourceServer
     TestTagResourceModel
     NAME_PREFIX "libs-kritaresources-"
-    LINK_LIBRARIES kritaglobal kritaplugin kritaresources kritaversion KF5::ConfigCore Qt5::Sql Qt5::Test)
+    LINK_LIBRARIES kritaglobal kritapigment kritaplugin kritaresources kritaversion KF5::ConfigCore Qt5::Sql Qt5::Test)
