Make it possible to add and remove tool presets

--- a/plugins/dockers/toolpresets/CMakeLists.txt
+++ b/plugins/dockers/toolpresets/CMakeLists.txt
@@ -6,6 +6,7 @@ set(KRITA_TOOLPRESETSDOCKER_SOURCES
 
 ki18n_wrap_ui(KRITA_TOOLPRESETSDOCKER_SOURCES
     WdgToolPresets.ui
+    WdgNewToolPreset.ui
 )
 
 
