Use the gradient server in the TestResourceServer test

--- a/libs/resources/tests/CMakeLists.txt
+++ b/libs/resources/tests/CMakeLists.txt
@@ -26,4 +26,4 @@ ecm_add_tests(
     TestResourceServer
     TestTagResourceModel
     NAME_PREFIX "libs-kritaresources-"
-    LINK_LIBRARIES kritaglobal kritapigment kritaplugin kritaresources kritaversion KF5::ConfigCore Qt5::Sql Qt5::Test)
+    LINK_LIBRARIES kritaglobal kritapigment kritaplugin kritaresources kritawidgets kritaversion KF5::ConfigCore Qt5::Sql Qt5::Test)
